# scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  NEWS  README.md  main.py  packages.txt  pyproject.toml  requirements.txt  result.json  setup.cfg  setup.py
.css/: app_styles.css
.streamlit/: config.toml
scraper/: app.py  config.py  content_detector.py  errors.py  interface.py  interfaces.py  link_collector.py  main.py  pdf_scraper.py  qa.py  robots.py  scraper.py  sg_qa.py  sg_scraper.py  streamlit_app.py  ui_components.py  url_scraper.py  utils.py
scraper/app/: app.py
scraper/config/: config.py  logging.py  scraper_logger.py
scraper/database/: milvus_config.py  vector_db.py
scraper/graphs/: __init__.py  base_graph.py  graph_factory.py  key_points_graph.py  qa_graph.py  summary_graph.py
scraper/models/: __init__.py  factory.py  model_factory.py
scraper/nodes/: __init__.py  ebook.py  generate_answer_node.py  key_points_node.py  qa_node.py  rag_node.py  summarizer_node.py
scraper/qa/: qa.py
scraper/query/: qa.py  sg_qa.py
scraper/rag/: __init__.py  dynamic_chunking.py  metadata_generator.py  prompt_template.py  prompt_template_generator.py  qa.py  rag.py  vector_db.py
scraper/scrapers/: __init__.py  ebook_scraper.py  pdf_scraper.py  scraper.py  url_scraper.py
scraper/scraping/: link_collector.py  robots.py  scraper.py  sg_scraper.py  text_extractor.py  web_scraper.py
scraper/utility/: utils.py
ui/: components.py
