[metadata]
name = scraper
author = Arkeodev
author_email = arkeodev@gmail.com
description = Web Scraping Tool
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
url = https://github.com/arkeodev

[options]
zip_safe = False
namespace_packages = scraper
packages = find_namespace:
include_package_data = True
python_requires = >=3.11
install_requires =
    streamlit==1.25.0
    requests==2.31.0
    beautifulsoup4==4.12.3
    selenium==4.11.1
    webdriver-manager==4.0.1
    faiss-cpu==1.8.0
    transformers==4.41.2
    python-dotenv==1.0.1
    langchain==0.2.2
    langchain-community==0.2.3
    langchain-huggingface==0.0.3
tests_require = pytest

[options.packages.find]
include =
    scraper.*
exclude =
    tests

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    scraper = streamlit run scraper.streamlit_app.py

[options.extras_require]
dev =
    pre-commit
    black
    isort
    pytest
